--- a/www/sites/all/themes/uclalib_omega/sass/components/_mobile-collapsible.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_mobile-collapsible.scss
@@ -117,3 +117,14 @@
     text-align: left;
   }
 }
+
+.mobile-collapsible.is-mobile {
+  .sticky-header {
+    display: none;
+  }
+  &.is-open {
+    .sticky-header {
+      display: table;
+    }
+  }
+}
